修改菜单选项名称

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"commands": [
 			{
 				"command": "extension.lessGenerator",
-				"title": "生成less文件"
+				"title": "Generate less File"
 			}
 		],
 		"snippets": [
